--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
 <body>
     <h1>Class Work Fronted</h1>
+
+    <form id="form">
+        <input type="text" placeholder="Имя" onchange="handlerInput('Имя', 1)" />
+        <input type="text" placeholder="Пароль" onchange="handlerInput('Пароль', 2)" />
+        <input type="text" placeholder="Мыло" onchange="handlerInput('Мыло', 3)" />
+        <input type="text" placeholder="Шото" onchange="handlerInput('Шото', 4)" />
+        <input type="submit" />
+    </form>
+
+    <button id="showFormInfo">SHOW</button>
+
+    <div>
+
+
+        <select id="sel">
+            <option value="Test 1"> Test 1 </option>
+            <option value="Test 2"> Test 2 </option>
+            <option value="Test 3"> Test 3 </option>
+            <option value="Test 4" selected> Test 4 </option>
+        </select>
+    </div>
+
 </body>
 <script src="./js/main.js"></script>
 
