--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@
 </head>
 
 <body>
-    <h1>Class Work Fronted</h1>
     <div id="root">
- 
+        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
+
+        </div>
+        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
+
+        </div>
+        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
+
+        </div>
+        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
+
+        </div>
+        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
+
+        </div>
+
+        <h1>Class Work Fronted</h1>
     </div>
 
 </body>
