--- a/index.html
+++ b/index.html
@@ -10,26 +10,14 @@
 
 <body>
     <div id="root">
-        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
-
-        </div>
-        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
-
-        </div>
-        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
-
-        </div>
-        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
-
-        </div>
-        <div class="item" style="height: 100px; width: 100px; background-color: aquamarine;">
-
-        </div>
-
         <h1>Class Work Fronted</h1>
+
+        
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
 </body>
-<script src="./js/main.js"></script>
 
 </html>
